--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,59 @@
 body {
-  padding: 0 ;
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
+}
 
+html {
+}
+
+.app-container {
+    .header-container {
+        .btn-login,
+        .btn-signup {
+            margin: 0 6px;
+            height: 40px;
+            width: 110px;
+            padding: 0 24px;
+            line-height: 1rem;
+        }
+
+        .navbar {
+            z-index: 10;
+            padding-top: 20px;
+            background-color: rgba(0, 0, 0, 0) !important;
+            .nav-link {
+                &.active {
+                    color: #00bfff;
+                }
+            }
+        }
+    }
+}
+
+video {
+    width: 50vw;
+    float: right;
+}
+
+.homepage-header {
+    display: flex;
+    align-items: center;
+
+    .homepage-content {
+        padding: 40px;
+
+        h2 {
+            font-style: bold;
+            font-weight: 800;
+        }
+
+        p {
+            font-style: oblique;
+        }
+    }
 }
