--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -40,11 +40,11 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 8px 34px 0 0;
-
+            padding: 8px 34px 8px 0;
+            border-bottom: 1px solid #ccc;
             .admin-toggle-sidebar {
                 font-size: 24px;
-                padding: 12px 24px;
+                padding: 12px 24px 12px 8px;
                 width: fit-content;
                 cursor: pointer;
             }
