--- a/src/components/Admin/Content/Feature/Questions/Questions.scss
+++ b/src/components/Admin/Content/Feature/Questions/Questions.scss
@@ -1,5 +1,5 @@
 .questions-container {
-    padding: 8px;
+    padding: 0 8px;
     .select-quiz {
         .sl {
             flex: 1;
@@ -8,7 +8,7 @@
         }
     }
     .add-questions {
-        max-height: calc(100vh - 180px);
+        max-height: calc(100vh - 215px);
         overflow-y: auto;
         border-top: 1px solid #ccc;
         border-radius: 4px;
